--- a/LocalDisasterPreventionInformationApp/Pages/Setting/FontPage.xaml
+++ b/LocalDisasterPreventionInformationApp/Pages/Setting/FontPage.xaml
@@ -1,5 +1,5 @@
 <ContentPage
-    x:Class="LocalDisasterPreventionInformationApp.Pages.Setting.SettingPage"
+    x:Class="LocalDisasterPreventionInformationApp.Pages.Setting.FontPage"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
     xmlns:base="clr-namespace:LocalDisasterPreventionInformationApp.Pages.Base"
