--- a/LocalDisasterPreventionInformationApp/Pages/Stock/ProductRegisterPage.xaml
+++ b/LocalDisasterPreventionInformationApp/Pages/Stock/ProductRegisterPage.xaml
@@ -1,12 +1,15 @@
-<?xml version="1.0" encoding="utf-8" ?>
-<ContentPage xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
-             xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-             x:Class="LocalDisasterPreventionInformationApp.Pages.Stock.ProductRegisterPage"
-             Title="ProductRegisterPage">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+<ContentPage
+    x:Class="LocalDisasterPreventionInformationApp.Pages.Stock.ProductRegisterPage"
+    xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
+    xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
+    xmlns:base="clr-namespace:LocalDisasterPreventionInformationApp.Pages.Base"
+    Shell.NavBarIsVisible="False">
+
+    <base:BasePage>
+        <base:BasePage.InnerContent>
+            <Grid>
+                <WebView Source="map.html" />
+            </Grid>
+        </base:BasePage.InnerContent>
+    </base:BasePage>
 </ContentPage>
