--- a/LocalDisasterPreventionInformationApp/AppShell.xaml
+++ b/LocalDisasterPreventionInformationApp/AppShell.xaml
@@ -14,11 +14,28 @@
 
     <!-- 会員登録ページ -->
     <ShellContent Route="RegisterPage"
+                  FlyoutItemIsVisible="False"
                   ContentTemplate="{DataTemplate register:RegisterPage}" />
 
     <!-- 会員登録確認ページ -->
     <ShellContent Route="ConfirmPage"
+                  FlyoutItemIsVisible="False"
                   ContentTemplate="{DataTemplate register:ConfirmPage}" />
+
+    <!-- 友達一覧ページ -->
+    <ShellContent Route="FriendsPage"
+                  FlyoutItemIsVisible="False"
+                  ContentTemplate="{DataTemplate friends:FriendsPage}" />
+
+    <!-- 通知ページ -->
+    <ShellContent Route="NotificationPage"
+                  FlyoutItemIsVisible="False"
+                  ContentTemplate="{DataTemplate notification:NotificationPage}" />
+
+    <!-- 設定ページ -->
+    <ShellContent Route="SettingPage"
+                  FlyoutItemIsVisible="False"
+                  ContentTemplate="{DataTemplate setting:SettingPage}" />
 
     <!-- ハンバーガーメニュー用 -->
     <!-- トップページ -->
@@ -36,25 +53,12 @@
     <!-- ハザードマップ -->
     <FlyoutItem Title="ハザードマップ">
         <ShellContent Route="HazardMapPage"
-                      ContentTemplate="{DataTemplate hazard:HazardMapPage}" />
+                  ContentTemplate="{DataTemplate hazard:HazardMapPage}" />
     </FlyoutItem>
 
     <!-- 備蓄管理 -->
     <FlyoutItem Title="備蓄管理">
-        <ShellContent Route="StockPage"
-                      ContentTemplate="{DataTemplate stock:StockPage}" />
+        <ShellContent Route="DisasterPage"
+                       ContentTemplate="{DataTemplate disaster:DisasterPage}" />
     </FlyoutItem>
-    <!-- ハンバーガーメニュー用ここまで -->
-
-    <!-- 友達一覧ページ -->
-    <ShellContent Route="FriendsPage"
-                  ContentTemplate="{DataTemplate friends:FriendsPage}" />
-
-    <!-- 通知ページ -->
-    <ShellContent Route="NotificationPage"
-                  ContentTemplate="{DataTemplate notification:NotificationPage}" />
-
-    <!-- 設定ページ -->
-    <ShellContent Route="SettingPage"
-                  ContentTemplate="{DataTemplate setting:SettingPage}" />
 </Shell>
